--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+.form-label{
+  margin-left: 35px;
+  margin-right: 10px;
+  margin-top: 35px;
+}
+
+.form-input{
+  margin-top: 35px;
+}
+
+.add-button{
+  margin-top: 50px;
+}
+
+table{
+  margin-top: 100px;
+  background-color: azure;
+}
